visibility fix

--- a/page1.css
+++ b/page1.css
@@ -77,14 +77,14 @@ button {
 #dark {
   background-color: black;
   font-family: 'Ubuntu';
-  margin-left: 1600px;
+  margin-left: 1200px;
   font-weight: bold;
   font-size: 20px;
   color: #FDE0CA;
   border-radius: 80px;
   border-color: white;
-  width: 200px;
-  height: 50px;
+  width: 160px;
+  height: 40px;
 }
 
 
